--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,5 @@
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/test_db
+JWT_SECRET_KEY=super-secret-jwt-key
 FLASK_ENV=development
-ENV_DEBUG=True
-ENV_PORT=5000
-ENV_HOST=0.0.0.0
-ENV_DATABASE_URL=postgresql://user:pass@localhost:5432/dbname
-ENV_SECRET_KEY=replace_me
+FLASK_APP=server/run.py
+SECRET_KEY=super-flask-secret-key
