--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,27 +1,13 @@
-Flask
-Flask-JWT-Extended
-Flask-Migrate
-Flask-SQLAlchemy
-SQLAlchemy
-psycopg2-binary
-alembic
-python-dotenv
-marshmallow
-marshmallow-sqlalchemy
-Flask-CORS
-gunicorn
-requests
-pytest
-pytest-flask
-
-
-
 Flask==2.3.3
+Flask-SQLAlchemy==3.0.5
+Flask-JWT-Extended==4.5.3
 Flask-CORS==4.0.0
+Flask-Migrate==4.0.5
 psycopg2-binary==2.9.7
-python-dotenv==1.0.0
-bcrypt==4.0.1
-PyJWT==2.8.0
 Werkzeug==2.3.7
+python-dotenv==1.0.0
+marshmallow==3.20.1
+flask-marshmallow==0.15.0
+marshmallow-sqlalchemy==0.29.0
+bcrypt==4.0.1
 gunicorn==21.2.0
-pytest==7.4.2
