--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/test_db
+DATABASE_URL=postgresql://postgres:1234@localhost:5432/test_db
 JWT_SECRET_KEY=super-secret-jwt-key
 FLASK_ENV=development
 FLASK_APP=server/run.py
