--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,5 @@
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/test_db
+JWT_SECRET_KEY=super-secret-jwt-key
 FLASK_ENV=development
 ENV_DEBUG=True
 ENV_PORT=5000
