--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.13.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^14.2.1",
@@ -39,6 +41,7 @@
     "globals": "^15.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "3.4.9",
     "vite": "^5.4.20"
