works on products api

--- a/Pipfile
+++ b/Pipfile
@@ -4,24 +4,25 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask-jwt-extended = "*"
 sqlalchemy = "*"
 alembic = "*"
-marshmallow-sqlalchemy = "*"
 requests = "*"
 pytest-flask = "*"
-psycopg2-binary = "==2.9.7"
-python-dotenv = "==1.0.0"
-bcrypt = "==4.0.1"
 pyjwt = "==2.8.0"
-werkzeug = "==2.3.7"
 pytest = "==7.4.2"
-flask-cors = "*"
-flask-sqlalchemy = "*"
-gunicorn = "*"
+flask-sqlalchemy = "==3.0.5"
+flask-jwt-extended = "==4.5.3"
+flask-cors = "==4.0.0"
+flask-migrate = "==4.0.5"
+psycopg2-binary = "==2.9.7"
+werkzeug = "==2.3.7"
+python-dotenv = "==1.0.0"
+marshmallow = "==3.20.1"
+flask-marshmallow = "==0.15.0"
+marshmallow-sqlalchemy = "==0.29.0"
+bcrypt = "==4.0.1"
+gunicorn = "==21.2.0"
 flask = "*"
-flask-migrate = "*"
-marshmallow = "<4"
 
 [dev-packages]
 
