--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,28 @@ build/
 
 # docs screenshot (if you keep screenshots locally)
 docs/actions-screenshot.png.env.local
+# frontend build / node
+my-app/node_modules/
+my-app/dist/
+my-app/build/
+
+# env / secrets
+*.env
+my-app/.env
+my-app/.env.local
+
+# backups and editor
+my-app/backups/
+my-app/backups_*/
+*.log
+.vscode/
+.DS_Store
+
+# guard against accidental nested app folder
+my-app/my-app/
+
+# OS / misc
+*.swp
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
