--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ flask = "*"
 flask-migrate = "*"
 marshmallow = "<4"
 psycopg2-binary = "==2.9.9"
+psycopg = {extras = ["binary"], version = "*"}
 
 [dev-packages]
 
