--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask-jwt-extended = "*"
+flask-jwt-extended = "==4.5.3"
 sqlalchemy = "*"
 alembic = "*"
-marshmallow-sqlalchemy = "*"
+marshmallow-sqlalchemy = "==0.29.0"
 requests = "*"
 pytest-flask = "*"
 python-dotenv = "==1.0.0"
@@ -15,14 +15,15 @@ bcrypt = "==4.0.1"
 pyjwt = "==2.8.0"
 werkzeug = "==2.3.7"
 pytest = "==7.4.2"
-flask-cors = "*"
-flask-sqlalchemy = "*"
-gunicorn = "*"
-flask = "*"
-flask-migrate = "*"
-marshmallow = "<4"
+flask-cors = "==4.0.0"
+flask-sqlalchemy = "==3.0.5"
+gunicorn = "==21.2.0"
+flask = "==2.3.3"
+flask-migrate = "==4.0.5"
+marshmallow = "==3.20.1"
 psycopg2-binary = "==2.9.9"
-psycopg = {extras = ["binary"], version = "*"}
+psycopg = {extras = ["binary"], version = "==3.1.19"}
+flask-marshmallow = "==0.15.0"
 
 [dev-packages]
 
